--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -10,7 +10,7 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{FA2D6CDF-C13C-1996-4A70-94601A45310B}</ProjectGuid>
+    <ProjectGuid>{D52B56B5-110B-F6BD-A735-BFC404A2898F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -61,10 +61,14 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\6000.2.5f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.UIToolkit.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\Repetition move.cs" />
+    <Compile Include="Assets\Scripts\EnemyMoveScript.cs" />
+    <Compile Include="Assets\Scripts\RocketLauncher Script.cs" />
+    <Compile Include="Assets\Scripts\TargetClosest Script.cs" />
+    <Compile Include="Assets\Scripts\TargetClick Script.cs" />
     <Compile Include="Assets\Scripts\GroundMover Script.cs" />
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
     <Compile Include="Assets\Scripts\RollingGround Script.cs" />
+    <Compile Include="Assets\Scripts\Repetition Script.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
