--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Assets\Scripts\TargetClosest Script.cs" />
     <Compile Include="Assets\Scripts\TargetClick Script.cs" />
     <Compile Include="Assets\Scripts\GroundMover Script.cs" />
+    <Compile Include="Assets\Scripts\TargetHold Script.cs" />
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
     <Compile Include="Assets\Scripts\RollingGround Script.cs" />
     <Compile Include="Assets\Scripts\Repetition Script.cs" />
