Fixed fire system/Made gate function

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,9 +69,9 @@
     <Compile Include="Assets\Scripts\SettingsMenuManager.cs" />
     <Compile Include="Assets\Scripts\EnemySpawnScript.cs" />
     <Compile Include="Assets\Scripts\CameraChangeLogic.cs" />
+    <Compile Include="Assets\Scripts\GateScript.cs" />
     <Compile Include="Assets\Scripts\Opacity.cs" />
     <Compile Include="Assets\Scripts\TargetClick Script.cs" />
-    <Compile Include="Assets\Scripts\GateButtonScript.cs" />
     <Compile Include="Assets\Scripts\GroundMover Script.cs" />
     <Compile Include="Assets\Scripts\TargetHold Script.cs" />
     <Compile Include="Assets\Scripts\EnemyDamage.cs" />
