--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -75,9 +75,9 @@
     <Compile Include="Assets\Scripts\GroundMover Script.cs" />
     <Compile Include="Assets\Scripts\TargetHold Script.cs" />
     <Compile Include="Assets\Scripts\EnemyDamage.cs" />
-    <Compile Include="Assets\Scripts\DeathScreen.cs" />
     <Compile Include="Assets\Scripts\MenuScript.cs" />
     <Compile Include="Assets\Scripts\RollingGround Script.cs" />
+    <Compile Include="Assets\Scripts\GameOverScreen.cs" />
     <Compile Include="Assets\Scripts\Repetition Script.cs" />
   </ItemGroup>
   <ItemGroup>
