general fixes before build

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Assets\Scripts\SettingsMenuManager.cs" />
     <Compile Include="Assets\Scripts\EnemySpawnScript.cs" />
     <Compile Include="Assets\Scripts\CameraChangeLogic.cs" />
+    <Compile Include="Assets\Scripts\WinScript.cs" />
     <Compile Include="Assets\Scripts\GateScript.cs" />
     <Compile Include="Assets\Scripts\Opacity.cs" />
     <Compile Include="Assets\Scripts\TargetClick Script.cs" />
