main menu functional

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -10,7 +10,7 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{EDB98CA7-98E5-5AC8-26A5-F2049967119B}</ProjectGuid>
+    <ProjectGuid>{D52B56B5-110B-F6BD-A735-BFC404A2898F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -76,6 +76,7 @@
     <Compile Include="Assets\Scripts\GroundMover Script.cs" />
     <Compile Include="Assets\Scripts\TargetHold Script.cs" />
     <Compile Include="Assets\Scripts\EnemyDamage.cs" />
+    <Compile Include="Assets\Scripts\CameraSnapToFace.cs" />
     <Compile Include="Assets\Scripts\MenuScript.cs" />
     <Compile Include="Assets\Scripts\RollingGround Script.cs" />
     <Compile Include="Assets\Scripts\GameOverScreen.cs" />
